php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25758 var_export fails to escape quotes
Submitted: 2003-10-06 07:15 UTC Modified: 2003-10-07 21:15 UTC
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: hiroki at asakawa dot net Assigned:
Status: Closed Package: Variables related
PHP Version: 4.3.3 OS: Widows2000
Private report: No CVE-ID: None
 [2003-10-06 07:15 UTC] hiroki at asakawa dot net
Description:
------------
Using var_export, single quotes in keys are not be escaped.


Reproduce code:
---------------
$test = array( "quote'" => array( "quote'" ) );
echo var_export($test,true);


Expected result:
----------------
output:
array ( 'quote\'' => array ( 0 => 'quote\'', ), )

Actual result:
--------------
output:
array ( 'quote'' => array ( 0 => 'quote\'', ), )

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-10-06 16:11 UTC] iliaa@php.net
Thank you for taking the time to write to us, but this is not
a bug. Please double-check the documentation available at
http://www.php.net/manual/ and the instructions on how to report
a bug at http://bugs.php.net/how-to-report.php

This is expected behaviour.
 [2003-10-07 07:26 UTC] hiroki at asakawa dot net
http://www.php.net/manual/en/function.var-export.php says
> It is similar to var_dump() with the exception that the 
> returned representation is valid PHP code. 
But above code does not generate valid PHP code.
Isn't it a bug?
 [2003-10-07 21:15 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 14:00:02 2026 UTC