Fixed bug #25758 (var_export does not escape ' & \ inside array keys)